# inet-mon

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  speedtest.lisence.json
prometheus/: prometheus.yml
src/: cfspeedtest.rs  main.rs  nr5103e.rs
src/nr5103e/: mod.rs  types.rs
src/speedtestnet/: mod.rs  types.rs
